src/test/deca/context/invalid/provided/method-is-not-defined.deca
class A{
    int x;

    int getX(){
        return x;
    }
}

{
    A a = new A();
    println(a.setX(2));
}